--- a/Tic-Tac-Toe/nbproject/project.properties
+++ b/Tic-Tac-Toe/nbproject/project.properties
@@ -30,7 +30,8 @@ javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
